fixed spacing and replaced another instance of 'localhost'

--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,8 @@ h1{
 .header{
   display: inline-flex;
   float: left;
+  margin-left: 15px;
+  margin-top: 20px;
   width: 100%;
   margin-right: 5%
 }
